tests/ui/privacy/private-type-in-interface.stderr
error: type `Priv` is private
  --> $DIR/private-type-in-interface.rs:16:9
   |
LL | fn f(_: m::Alias) {}
   |         ^^^^^^^^ private type

error: type `Priv` is private
  --> $DIR/private-type-in-interface.rs:16:6
   |
LL | fn f(_: m::Alias) {}
   |      ^ private type

error: type `ext::Priv` is private
  --> $DIR/private-type-in-interface.rs:18:13
   |
LL | fn f_ext(_: ext::Alias) {}
   |             ^^^^^^^^^^ private type

error: type `ext::Priv` is private
  --> $DIR/private-type-in-interface.rs:18:10
   |
LL | fn f_ext(_: ext::Alias) {}
   |          ^ private type

error: type `Priv` is private
  --> $DIR/private-type-in-interface.rs:22:6
   |
LL | impl m::Alias {}
   |      ^^^^^^^^ private type

error: type `ext::Priv` is private
  --> $DIR/private-type-in-interface.rs:23:14
   |
LL | impl Tr1 for ext::Alias {}
   |              ^^^^^^^^^^ private type

error: type `Priv` is private
  --> $DIR/private-type-in-interface.rs:24:10
   |
LL | type A = <m::Alias as m::Trait>::X;
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^ private type

error: type `Priv` is private
  --> $DIR/private-type-in-interface.rs:28:11
   |
LL | fn g() -> impl Tr2<m::Alias> { 0 }
   |           ^^^^^^^^^^^^^^^^^^ private type

error: type `ext::Priv` is private
  --> $DIR/private-type-in-interface.rs:29:15
   |
LL | fn g_ext() -> impl Tr2<ext::Alias> { 0 }
   |               ^^^^^^^^^^^^^^^^^^^^ private type

error: aborting due to 9 previous errors

